# vuln-app-cc

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: auth.py
backend/app/core/: security.py
backend/app/db/: session.py
backend/app/services/: auth_service.py
docs/: EXPLOITS.md
frontend/static/css/: styles.css
frontend/templates/: dashboard.html  login.html  signup.html
