[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vulnerable-app"
version = "1.0.0"
description = "Educational vulnerable web app for learning OWASP Top 10"
readme = "../README.md"
requires-python = ">=3.9"
authors = [
    {name = "Zelaid"}
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    "itsdangerous>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app.py", "config", "routes", "controllers"]
